@@ -46,4 +46,80 @@
         </dependency>
     </dependencies>
 
+    <profiles>
+        <profile>
+            <id>server</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <configuration>
+                            <executable>java</executable>
+                            <arguments>
+                                <argument>-showversion</argument>
+                                <argument>-Xmx512m</argument>
+                                <argument>-Xms512m</argument>
+                                <argument>-Xmn256m</argument>
+                                <argument>-XX:+PrintCommandLineFlags</argument>
+                                <argument>-verbose:gc</argument>
+                                <!--<argument>-XX:+PrintGCDetails</argument>-->
+                                <!--<argument>-XX:+PrintGCDateStamps</argument>-->
+                                <argument>-XX:+UseParallelOldGC</argument>
+                                <argument>-XX:-UseAdaptiveSizePolicy</argument>
+                                <!--<argument>-XX:+UseConcMarkSweepGC</argument>-->
+                                <!--<argument>-XX:+UnlockExperimentalVMOptions</argument>-->
+                                <!--<argument>-XX:+UseG1GC</argument>-->
+                                <argument>-cp</argument>
+                                <classpath />
+                                <argument>org.cometd.benchmark.BayeuxLoadServer</argument>
+                            </arguments>
+                            <classpathScope>test</classpathScope>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>client</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <configuration>
+                            <executable>java</executable>
+                            <arguments>
+                                <argument>-showversion</argument>
+                                <argument>-Xmx1024m</argument>
+                                <argument>-Xms1024m</argument>
+                                <argument>-Xmn512m</argument>
+                                <argument>-XX:+PrintCommandLineFlags</argument>
+                                <argument>-verbose:gc</argument>
+                                <!--<argument>-XX:+PrintGCDetails</argument>-->
+                                <!--<argument>-XX:+PrintGCDateStamps</argument>-->
+                                <argument>-XX:+UseParallelOldGC</argument>
+                                <argument>-XX:-UseAdaptiveSizePolicy</argument>
+                                <!--<argument>-XX:+UseConcMarkSweepGC</argument>-->
+                                <!--<argument>-XX:+UnlockExperimentalVMOptions</argument>-->
+                                <!--<argument>-XX:+UseG1GC</argument>-->
+                                <argument>-cp</argument>
+                                <classpath />
+                                <argument>org.cometd.benchmark.BayeuxLoadClient</argument>
+                            </arguments>
+                            <classpathScope>test</classpathScope>
+<!--
+                            <systemProperties>
+                                <systemProperty>
+                                    <key>org.eclipse.jetty.util.log.DEBUG</key>
+                                    <value>true</value>
+                                </systemProperty>
+                            </systemProperties>
+-->
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
